--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="error" style="margin-top: 20px; padding: 15px; background: #ffebee; color: #c62828; border-radius: 4px; display: none;"></div>
 
     <script>
-        // 👇 REPLACE THIS with your actual Colab URL
-        const COLAB_URL = "YOUR_COLAB_URL_HERE"; 
+        // 👇 YOUR ACTUAL COLAB URL (copied from above)
+        const COLAB_URL = "https://8490-m-s-lxnluh8biwk5-a.us-east4-2.prod.colab.dev";
 
         async function callColab() {
             const button = document.querySelector('button');
@@ -36,22 +36,20 @@
             const errorDiv = document.getElementById('error');
             const input = document.getElementById('messageInput');
 
-            // Show loading
             button.disabled = true;
             button.textContent = 'Calling Colab...';
             responseDiv.style.display = 'none';
             errorDiv.style.display = 'none';
 
             try {
-                const res = await fetch(`${COLAB_URL}/api/echo`, {
+                const res = await fetch(`${COLAB_URL}/echo`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ 
-                        message: input.value || 'Hello from Vercel!' 
+                        message: input.value || 'Hello from Vercel!',
+                        timestamp: Date.now()
                     })
                 });
-
-                if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
                 
                 const data = await res.json();
                 responseDiv.textContent = JSON.stringify(data, null, 2);
@@ -60,7 +58,6 @@
                 errorDiv.textContent = 'Error: ' + error.message;
                 errorDiv.style.display = 'block';
             } finally {
-                // Reset button
                 button.disabled = false;
                 button.textContent = 'Call Colab';
             }
